# weaver-semconv-example

./: .golangci.yml  .yamlfmt.yaml  README.md  attribute_group.go  biome.json  go.mod  go.sum  justfile  main.py  package-lock.json  package.json  pyproject.toml  rslib.config.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: go.yaml  py.yaml  ts.yaml
acmeconv/: metric.go
docs/attributes/: README.md  acme.md  oauth2.md
model/: attributes.yaml  registry_manifest.yaml
semconv/semconvattributes/: acme_attributes.py  oauth2_attributes.py
semconv/semconvmetrics/: acme_metrics.py
src/: index.ts  stable_attributes.ts  stable_metrics.ts
